# cFS

./: .gitmodules
apps/gnc_app/: CHANGELOG.md  CMakeLists.txt  README.md  SECURITY.md  arch_build.cmake  mission_build.cmake
apps/gnc_app/.github/workflows/: codeql-build.yml
apps/gnc_app/config/: default_gnc_app_fcncode_values.h  default_gnc_app_interface_cfg_values.h  default_gnc_app_internal_cfg_values.h  default_gnc_app_mission_cfg.h  default_gnc_app_msg.h  default_gnc_app_msgdefs.h  default_gnc_app_msgid_values.h  default_gnc_app_msgids.h  default_gnc_app_msgstruct.h  default_gnc_app_perfids.h  default_gnc_app_platform_cfg.h  default_gnc_app_tbl.h  default_gnc_app_tbldefs.h  default_gnc_app_tblstruct.h  default_gnc_app_topicid_values.h  eds_gnc_app_fcncode_values.h  eds_gnc_app_interface_cfg_values.h  eds_gnc_app_msgdefs.h  eds_gnc_app_msgstruct.h  eds_gnc_app_tbldefs.h  eds_gnc_app_topicid_values.h
apps/gnc_app/eds/: gnc_app.xml
apps/gnc_app/fsw/inc/: gnc_app_eventids.h  gnc_app_fcncodes.h  gnc_app_interface_cfg.h  gnc_app_internal_cfg.h  gnc_app_topicids.h
apps/gnc_app/fsw/src/: gnc_app.c  gnc_app.h  gnc_app_cmds.c  gnc_app_cmds.h  gnc_app_dispatch.c  gnc_app_dispatch.h  gnc_app_eds_dispatch.c  gnc_app_utils.c  gnc_app_utils.h  gnc_app_version.h
apps/gnc_app/fsw/tables/: gnc_app_tbl.c
apps/gnc_app/unit-test/: CMakeLists.txt
apps/gnc_app/unit-test/common/: eventcheck.c  eventcheck.h  setup.c  setup.h
apps/gnc_app/unit-test/coveragetest/: coveragetest_gnc_app.c  coveragetest_gnc_app_cmds.c  coveragetest_gnc_app_dispatch.c  coveragetest_gnc_app_utils.c  (+2 more)
(+5 files in other folders)
